[project]
name = "what-ive-learned"
version = "0.1.0"
description = "Add a short description here"
authors = [{name = "jgkym", email = "jingi.data@gmail.com"}]
requires-python = ">= 3.11"
dependencies = []

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["osx-arm64"]

[tool.pixi.pypi-dependencies]
what-ive-learned = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
ruff = ">=0.7.3,<0.8"
pre-commit = ">=4.0.1,<5"
